--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "localforage": "^1.10.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
